yaml/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    tier: application
  name: application
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: application
  strategy: {}
  template:
    metadata:
      labels:
        tier: application
    spec:
      containers:
      - image: nginxinc/nginx-unprivileged
        name: nginx
