yaml/nginxnodeportsvc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: nginxpod
  name: nginxnodeportsvc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30200
  selector:
    run: nginxpod
  type: NodePort
status:
  loadBalancer: {}
